# python-app-template

./: Dockerfile  docker-compose.yml  pyproject.toml  setup.cfg
script/: main.py
src/: bootstrap.py
src/infrastructure/: Container.py  SingletonMeta.py
src/presentation/router/: __init__.py  project_router.py
test/integration/: AbstractIntegrationTest.py
