[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "project"
version = "0.1"
description = "project"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
authors = [
    { name = "Chiappelloni nicolas", email = "chiappelloni.nicolas@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "setuptools~=68.2.0",
    "fastapi~=0.111.0",
    "uvicorn~=0.30.1",
    "pytest~=8.2.2"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]