[metadata]
name = project
version = 0.1
author = Chiappelloni nicolas
author_email = chiappelloni.nicolas@email.com
description = project
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE

[options]
packages = find:
package_dir=
    =src

[options.packages.find]
where = src
include = *
